<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sort"
        android:orderInCategory="100"
        android:title="@string/menu_action_sort"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_options"
        android:orderInCategory="100"
        android:title="@string/menu_action_options"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_sync"
        android:orderInCategory="100"
        android:title="@string/menu_action_sync"
        android:icon="@drawable/ic_menu_sync"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="搜索"
        android:icon="@drawable/ic_menu_search"
        app:showAsAction="always"/>

</menu>
